all device tests now pass